2008-09-12  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/RegenerateGuidStep.cs: new step that is used
	to regenerate the Mvid identifier of each linked module.

	* monolinker.exe.sources:
	* Mono.Linker.csproj: add RegeneratedGuidStep to the build.

	* Mono.Linker/Driver.cs: add a -g option to control whether to
	regenerate the modules identifier or not.

2008-09-01  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/AssemblyResolver.cs: properly cache .exes.

2008-08-26  Zoltan Varga  <vargaz@gmail.com>

	* Descriptors/mscorlib.xml: Add EntryPointNotFoundException.

2008-03-28  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/XApiReader.cs: deal better with complex names.

2008-03-28  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/LinkContext.cs: do not force the loading of
	debug symbols if not asked.

2007-12-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* Descriptors/mscorlib.xml: Preserve all for CultureInfo to prevent
	linker from removing CreateCulture method that is only used by the
	runtime.

2007-11-21  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/ResolveFromXmlStep.cs:
		Implement resolving from xml patterns.

2007-10-25  Jb Evain  <jbevain@novell.com>

	* monolinker.exe.sources
	* Mono.Linker.Steps/ResolveFromApiInfoStep.cs
	* Mono.Linker/Driver.cs
	* Mono.Linker/XApiReader.cs
	* Mono.Linker/ApiInfoService.cs
	* Mono.Linker/IXApiVisitor.cs:

		Big refactoring. Move logic to read Xml Api Info files
		to XApiReader, so we can use that in the tuner to deal
		with xapi files to inject attributes.

2007-08-27  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/Driver.cs
	  Mono.Linker/Annotations.cs
	  Mono.Linker/LinkContext.cs
	  Mono.Linker.Steps/OutputStep.cs:
		Implement symbols loading/saving.

2007-08-16  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/Driver.cs
	  Mono.Linker/LinkContext.cs:
		Add a way to specify parameters to the context.

2007-08-05  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/ResolveFromXmlStep.cs: